# ai-galaxy

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  dockerfile  index.html  test_structure.py
.github/workflows/: ci.yml  deploy.yml  integration.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  build.sh  deploy.yaml  docker-compose.override.yml  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements-update.sh  requirements.txt  setup.sh  temp_fix.txt
backend/app/: __init__.py  clinical.py  config.py  crm.py  exceptions.py  fraud.py  main.py  main.py.backup  middleware.py  monitoring.py  nlp.py  nlp_config.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/routers/: __init__.py  clinical.py  crm.py  fraud.py  nlp.py
backend/app/tests/: __init__.py  conftest.py  test_clinical.py  test_crm.py  test_fraud.py  test_integration.py  test_model_manager.py  test_nlp.py
backend/init-db/: init-db.sql
backend/tests/: __init__.py  conftest.py  pyproject.toml  test_clinical.py  test_config.py  test_crm.py  test_fraud.py  test_integration.py  test_main_integration.py  test_nlp.py
backend/tests/integration/: __init__.py
config/: setting.py
frontend/: config.js  galaxy.js  index.html  planets.json  style.css
k8s/: deployment.yaml
