[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x1mvp-portfolio"
version = "2.0.0"
description = "AI-powered data engineering portfolio demos"
authors = [
    {name = "x1mvp", email = "contact@x1mvp.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "google-cloud-aiplatform>=1.52.0",
    "openai>=1.42.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "numpy>=2.1.1",
    "joblib>=1.4.2",
    "xgboost>=2.0.3",
    "shap>=0.45.1",
    "scikit-learn>=1.5.1",
    "onnxruntime>=1.19.2",
    "transformers>=4.44.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]
redis = ["redis>=5.1.1", "aioredis>=2.0.1"]
kafka = ["kafka-python>=2.0.2", "confluent-kafka>=2.5.0"]
mlflow = ["mlflow>=2.16.2"]

[project.urls]
Homepage = "https://x1mvp.dev"
Documentation = "https://docs.x1mvp.dev"
Repository = "https://github.com/x1mvp/portfolio"
Issues = "https://github.com/x1mvp/portfolio/issues"

[project.scripts]
portfolio-server = "portfolio.main:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["portfolio"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "B", "C90"]
ignore = ["E501", "B008"]
extend-exclude = ["__pycache__", "*.pyc"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=portfolio",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
